Update and rename FPL (2).ipynb to FantasyFootball.ipynb

--- a/FantasyFootball.ipynb
+++ b/FantasyFootball.ipynb
@@ -13,7 +13,7 @@
    "id": "d1325b46",
    "metadata": {},
    "source": [
-    "## Tarkoituksena on hakea FPL-pelin dataa ja johtaa siitä hyödyllisiä johtopäätöksiä. FPL on peli, jossa valitaan jalkapallopelaajia ja saadaan pisteitä riippuen siitä, kuinka hyvin he pärjäävät otteluissa"
+    "### Tarkoituksena on hakea FPL-pelin dataa ja johtaa siitä hyödyllisiä johtopäätöksiä. FPL on peli, jossa valitaan jalkapallopelaajia ja saadaan pisteitä riippuen siitä, kuinka hyvin he pärjäävät otteluissa"
    ]
   },
   {
